[tool.poetry]
name = "complexomics-mitcom"
version = "1.0.2"
description = "MitCOM: methods to identify protein assemblies in protein profiles"
authors = ["Alexander Haupt <alexander.haupt@physiologie.uni-freiburg.de>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mitcom" }]

[tool.poetry.dependencies]
python = "3.10.*"
lmfit = "^1.0.3"
matplotlib = "^3.6.2"
numba = "^0.55"
pandas = "^1.5.1"
scikit-learn = "^1.1.2"
tables = "^3.7.0"

jupyter = { version = "^1.0.0", optional = true }
jupyterlab = { version = "^3.5.0", optional = true }
plotly = { version = "^5.11.0", optional = true }

[tool.poetry.extras]
notebook = ["jupyter", "jupyterlab", "plotly"]

[tool.poetry.scripts]
complex_find_peaks = 'scripts.find_peaks:main'

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
ignore_missing_imports = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
